# datasets

./: .gitignore  GDRIVE_SETUP.md  README.md  build_song_sheets_dataset.py  dataset-sync.py  gdrive_data.py  main.py  pyproject.toml  sanitization.py  secrets.toml.template  test_sanitization.py  test_validation.py  validate_datasets.py
.github/workflows/: build-dataset.yaml  copilot-setup-steps.yml  setup-copilot-steps.yml
data/: jam-sessions.jsonl  song-sheets.json  song_sheets_dataset.json
dataset-sync-scripts/: jam_session_plays.py  song_sheets.py
pages/: dataset_explorer.py  jam_sessions_stats.py  song_popularity.py  song_sheets_stats.py
schemas/: README.md  sessions.json  song-sheets.json
