[project]
name = "ukulele-tuesday-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.49.1",
    "click>=8.1.7",
    "google-api-python-client>=2.142.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "altair>=5.0.0",
    "st-files-connection>=0.1.0",
    "gcsfs>=2025.9.0",
]
